fixed tiles not showing all text on mobile

--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -176,7 +176,7 @@
 			display: block;
 
 			article {
-				height: 20em;
+				height: 35em;
 				width: 100% !important;
 			}
 		}
